# llm-videos

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
llm_videos/: .env.example  main.py
llm_videos/celery/: video_processing.py
llm_videos/cron/: video_processing.py
llm_videos/deployment/sql/: 20240617_dongnt.sql
llm_videos/errors/: code.py
llm_videos/extract/: __init__.py  youtube.py
llm_videos/jobs/: video_handler.py
llm_videos/middleware/: auth.py
llm_videos/models/: account_config.py  authentication.py  background_jobs.py  chats.py  users.py  users_upload.py  video_subtitles.py  videos.py
llm_videos/prompts/: template.py
llm_videos/resources/: 5_en.srt  6_vi.srt
llm_videos/schemas/: account.py  chat.py  login.py  register.py  video.py
llm_videos/services/: account_config.py  chat.py  handler_video.py  summarize.py  user_service.py
llm_videos/tools/: bcrypt.py  file.py  string.py  youtube.py
llm_videos/translate/: __init__.py  systran.py
