[tool.poetry]
name = "llm-videos"
version = "0.1.0"
description = ""
authors = ["dongnt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
youtube-transcript-api = "^0.6.2"
youtube-dl = "^2021.12.17"
pytube = "^15.0.0"
certifi = "^2024.6.2"
pysrt = "^1.1.2"
openai = "^1.33.0"
redis = "^5.0.5"
redisvl = "^0.2.0"
tiktoken = "^0.7.0"
pymysql = "^1.1.1"
flask-http-middleware = "^0.4.2"
bcrypt = "^4.1.3"
walrus = "^0.9.4"
loguru = "^0.7.2"
marshmallow = "^3.21.3"
llama-index = "^0.10.62"
llama-index-readers-chroma = "^0.1.4"
chromadb = ">=0.4.22,<0.5.0"
llama-index-vector-stores-chroma = "^0.1.10"
llama-index-storage-chat-store-redis = "^0.1.3"
websockets = "^12.0"
celery = "^5.4.0"
langtrace-python-sdk = "^2.2.19"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask-app = "main:app"
